--- a/styles/style.css
+++ b/styles/style.css
@@ -16,7 +16,7 @@ body {
     --header-height: 80px;
     --shadow: 0px 10px 20px -12px rgba(0,0,0,0.45);
     --gutter: 30px;
-    --footer-height: 25px;
+    --footer-height: 25px; 
     
     font-family: 'Titillium Web', sans-serif;
     
@@ -58,6 +58,7 @@ footer {
     display: flex;
     justify-content: flex-end;
     background-color: rgb(85, 85, 85);
+    height: 100px;
     box-shadow: var(--shadow);
 }
 
